// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore items without name 1`] = `
<ul>
  <li
    className=""
    key="#button"
  >
    <Styled(Link)
      className=""
      href="#button"
    >
      Button
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should render sections with nested components 1`] = `
<ul>
  <li
    className=""
    key="#button"
  >
    <Styled(Link)
      className=""
      href="#button"
    >
      Button
    </Styled(Link)>
  </li>
  <li
    className=""
    key="#input"
  >
    <Styled(Link)
      className=""
      href="#input"
    >
      Input
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should set the correct href for items 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "blank#button",
        "name": "Button",
        "slug": "button",
      },
      Object {
        "href": "blank#input",
        "name": "Input",
        "slug": "input",
      },
    ]
  }
/>
`;

exports[`should set the correct href for items when isolated links should be used 1`] = `
<Styled(ComponentsList)
  classes={Object {}}
  items={
    Array [
      Object {
        "href": "blank#!/Button",
        "name": "Button",
        "slug": "button",
      },
      Object {
        "href": "blank#!/Input",
        "name": "Input",
        "slug": "input",
      },
    ]
  }
/>
`;
